--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,18 @@
 :root {
-    --black: #11151f;
-    --dark-grey: #d4d4d4;
-    --grey-blue-hover: #283040;
-    --grey-blue: #374456;
-    --mid-grey: #f1f1f1;
-    --white: #fcfcfc;
-    --yellow: #e5b261;
+  --black: #11151f;
+  --dark-grey: #d4d4d4;
+  --grey-blue-hover: #283040;
+  --grey-blue: #374456;
+  --mid-grey: #f1f1f1;
+  --white: #fcfcfc;
+  --yellow: #e5b261;
 }
 
 body {
-    background-color: var(--white);
-    color: var(--black);
-    font-family: 'Work Sans', sans-serif;
+  background-color: var(--white);
+  color: var(--black);
+  font-family: "Work Sans", sans-serif;
 }
-
-
 
 /* ON YOUR OWN
 
@@ -25,3 +23,61 @@ body {
     3. have a drop-shadow on the text
 
 */
+svg {
+  width: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  header a {
+    color: var(--white);
+    text-shadow: 2px 2px var(--dark-grey);
+    text-decoration: none;
+    font-weight: 900;
+    font-size: 2rem;
+  }
+  body {
+    background-image: url("/img/work-at-home-with-pets-small.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    height: 100vh;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  main h2 {
+    font-size: 4rem;
+    line-height: 4rem;
+    margin-top: 30rem;
+  }
+  main p {
+    margin-top: 2rem;
+  }
+
+  .trial-banner {
+    color: white;
+    background-color: var(--yellow);
+    text-align: center;
+    font-size: 1.75rem;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--mid-grey);
+    padding: 1rem;
+  }
+
+  form > h3,
+  form > label {
+    padding: 1rem 0 0 0;
+  }
+
+  form > button {
+    background-color: var(--grey-blue);
+    margin-top: 1rem;
+    border-radius: 5px;
+    padding: 0.25rem;
+    color: var(--white);
+    text-transform: capitalize;
+  }
+}
