--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,8 @@ svg {
   width: 2rem;
 }
 
-@media screen and (max-width: 600px) {
+/* SMALL */
+@media screen and (min-width: 600px) {
   header a {
     color: var(--white);
     text-shadow: 2px 2px var(--dark-grey);
@@ -48,7 +49,7 @@ svg {
   main h2 {
     font-size: 4rem;
     line-height: 4rem;
-    margin-top: 30rem;
+    margin-top: 37rem;
   }
   main p {
     margin-top: 2rem;
@@ -61,15 +62,21 @@ svg {
     font-size: 1.75rem;
   }
   form {
+    background-color: var(--mid-grey);
+  }
+  form > div {
+    display: grid;
+    grid-template-columns: auto;
+  }
+  .input {
     display: flex;
     flex-direction: column;
-    background-color: var(--mid-grey);
-    padding: 1rem;
+    margin: 0.5rem;
   }
 
   form > h3,
   form > label {
-    padding: 1rem 0 0 0;
+    padding: 1rem 0 0 1rem;
   }
 
   form > button {
@@ -79,5 +86,72 @@ svg {
     padding: 0.25rem;
     color: var(--white);
     text-transform: capitalize;
+    width: 96%;
+    margin-left: 0.75rem;
+  }
+}
+
+/* MEDIUM */
+@media screen and (min-width: 820px) {
+  header a {
+    color: var(--white);
+    text-shadow: 2px 2px var(--dark-grey);
+    text-decoration: none;
+    font-weight: 900;
+    font-size: 2rem;
+  }
+  body {
+    background-image: url("/img/work-at-home-with-pets-small.jpg");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    height: 100vh;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  main h2 {
+    font-size: 4rem;
+    line-height: 4rem;
+    margin-top: 50rem;
+  }
+  main p {
+    margin-top: 2rem;
+  }
+
+  .trial-banner {
+    color: white;
+    background-color: var(--yellow);
+    text-align: center;
+    font-size: 1.75rem;
+  }
+  form {
+    background-color: var(--mid-grey);
+  }
+  form > div {
+    display: grid;
+    grid-template-columns: 50% auto;
+  }
+  .input {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+  }
+
+  form > h3,
+  form > label {
+    padding: 1rem 0 0 1rem;
+  }
+
+  form > button {
+    background-color: var(--grey-blue);
+    margin-top: 1rem;
+    border-radius: 5px;
+    padding: 0.25rem;
+    color: var(--white);
+    text-transform: capitalize;
+    width: 97%;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
   }
 }
